rafatoração de nomeação de classes para padrão zend

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -16,15 +16,24 @@ resources.db.params.password = "pendriverapido"
 resources.db.params.dbname = "pendriverapido"
 resources.db.params.charset = "utf8"
 resources.db.isDefaultTableAdapter = true
+autoloaderNamespaces[] = "Plugin"
+resources.frontController.plugins.auth = "Plugin_Auth"
 
 
 [staging : production]
+autoloaderNamespaces[] = "Plugin"
+resources.frontController.plugins.auth = "Plugin_Auth"
+
 
 [testing : production]
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
+autoloaderNamespaces[] = "Plugin"
+resources.frontController.plugins.auth = "Plugin_Auth"
 
 [development : production]
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
+autoloaderNamespaces[] = "Plugin"
+resources.frontController.plugins.auth = "Plugin_Auth"
